--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,20 +5,20 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/supreme_blue</item>
         <item name="colorPrimaryDark">@color/supreme_blue</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/lemon_wingless</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
+    <style name="AppTheme.NoActionBar"/>
+        <!--<item name="windowActionBar">false</item>-->
+        <!--<item name="windowNoTitle">true</item>-->
+    <!--</style>-->
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!--<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
 
-    <style name="MyButton" parent="Theme.AppCompat.Light">
-        <item name="colorControlHighlight">@color/colorAccentTemp</item>
-    </style>
+    <!--<style name="MyButton" parent="Theme.AppCompat.Light">-->
+        <!--<item name="colorControlHighlight">@color/colorAccentTemp</item>-->
+    <!--</style>-->
 
 </resources>
