--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="activity_vertical_margin_land">14dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="dialog_title_header">21sp</dimen>
+
     <dimen name="font_text_view">17sp</dimen>
     <dimen name="font_app_name">22sp</dimen>
 
