--- a/app/src/main/res/layout/activity_product_tracking.xml
+++ b/app/src/main/res/layout/activity_product_tracking.xml
@@ -1,43 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/linearLayout1"
-    android:layout_width="match_parent"
-    android:layout_height="400dp"
-    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout android:layout_height="wrap_content"
-        android:id="@+id/linearLayout2" android:layout_width="match_parent">
-        <Button android:layout_height="50dp" android:layout_weight=".30"
-            android:text="Cancel" android:layout_width="0dp" android:id="@+id/cancel" />
-        <Button android:layout_height="50dp" android:layout_weight=".35"
-            android:text="Clear" android:layout_width="0dp" android:id="@+id/clear" />
-        <Button android:layout_height="50dp" android:layout_weight=".35"
-            android:text="Save" android:layout_width="0dp" android:id="@+id/getsign" />
-    </LinearLayout>
-    <TableLayout android:layout_height="wrap_content"
-        android:id="@+id/tableLayout1" android:layout_width="match_parent">
-        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <EditText android:layout_height="wrap_content" android:id="@+id/yourName"
-                android:layout_weight="1" android:layout_width="match_parent"
-                android:maxLength="30">
-                <requestFocus />
-            </EditText>
-        </TableRow>
-        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView android:layout_height="wrap_content"
-                android:text="" android:maxLength="30"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content" />
-            <TextView android:layout_height="wrap_content" android:id="@+id/textView2"
-                android:text="Please Sign below ..." android:maxLength="30"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content" />
-        </TableRow>
-    </TableLayout>
-    <LinearLayout
-        android:layout_height="match_parent"
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
+    android:background="@color/little_light_gray"
+
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <RelativeLayout
+
+        android:layout_marginStart="@dimen/round_padding"
+        android:layout_marginEnd="@dimen/round_padding"
+        android:layout_marginBottom="@dimen/round_padding"
+        android:layout_marginTop="@dimen/double_round"
+
         android:layout_width="match_parent"
-        android:id="@+id/linearLayout"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_arrow_back_36"
+            android:tint="@color/stone_gray"
+
+            android:id="@+id/backPressedState"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:gravity="center|center_vertical"
+
+            android:text="กรุณาเซ็นต์ชื่อผู้รับ ในพื้นว่างด้านล่าง"
+
+            android:layout_toEndOf="@+id/backPressedState"
+
+            android:textSize="@dimen/font_app_name"/>
+
+    </RelativeLayout>
+
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_width="match_parent"-->
+
+        <!--card_view:cardCornerRadius="0dp"-->
+
+        <!--android:paddingStart="2dp"-->
+        <!--android:paddingEnd="2dp"-->
+
+        <!--android:background="@android:color/transparent"-->
+
+        <!--android:layout_marginStart="@dimen/round_padding"-->
+        <!--android:layout_marginEnd="@dimen/round_padding"-->
+
+        <!--android:layout_marginBottom="65dp"-->
+        <!--android:layout_marginTop="65dp">-->
+
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+
+            android:background="@color/angel_white"
+
+            android:layout_marginBottom="65dp"
+            android:layout_marginTop="65dp"
+
+            android:layout_marginStart="@dimen/round_padding"
+            android:layout_marginEnd="@dimen/round_padding"
+
+            android:id="@+id/linearLayout"
+            android:orientation="horizontal">
         </LinearLayout>
-</LinearLayout>
+    <!--</android.support.v7.widget.CardView>-->
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+
+        android:layout_marginStart="@dimen/slice_align"
+        android:layout_marginEnd="@dimen/slice_align"
+        android:layout_marginBottom="@dimen/slice_align">
+
+        <android.support.v7.widget.CardView
+            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_weight=".35"
+
+            android:paddingStart="2dp"
+            android:paddingEnd="2dp"
+
+            card_view:cardCornerRadius="0dp"
+
+            android:layout_margin="2dp"
+
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            card_view:cardPreventCornerOverlap="false"
+            card_view:cardBackgroundColor="@android:color/transparent">
+        <Button
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:background="@color/rose_cursed_rain"
+
+            android:text="วาดใหม่"
+            android:textSize="@dimen/font_app_name"
+            android:textColor="@color/angel_white"
+
+            android:id="@+id/btn_signature_clear" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_weight=".35"
+
+            android:paddingStart="2dp"
+            android:paddingEnd="2dp"
+
+            android:layout_margin="2dp"
+
+            card_view:cardCornerRadius="0dp"
+
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            card_view:cardPreventCornerOverlap="false"
+            card_view:cardBackgroundColor="@android:color/transparent">
+
+        <Button
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:background="@color/lemon_light_fortune"
+
+            android:text="บันทึก"
+            android:textSize="@dimen/font_app_name"
+            android:textColor="@color/angel_white"
+
+            android:id="@+id/btn_signature_submit" />
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+</RelativeLayout>
