--- a/app/src/main/res/_A1_invoice/layout/dialog_invoice.xml
+++ b/app/src/main/res/_A1_invoice/layout/dialog_invoice.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:padding="@dimen/round_padding"
+            android:padding="@dimen/double_round"
             android:background="@color/lemon_wingless">
 
             <ImageButton
@@ -36,25 +36,23 @@
 
                 android:id="@+id/view_dialog_title"
 
-                android:text=""
+                android:text="เลือกเมนูใดเมนูหนึ่งด้านล่าง"
                 android:textColor="@color/angel_white"
                 android:textSize="@dimen/dialog_title_header"/>
         </LinearLayout>
 
-        <View android:layout_width="match_parent"
-              android:layout_height="5dp"
-              android:background="@drawable/shape_elevation"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+
+            android:padding="@dimen/slice_align"
+
+            android:background="@color/angel_white">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:layout_marginBottom="@dimen/double_round">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -65,21 +63,21 @@
                     android:id="@+id/text_view_invoice_preview"
 
                     android:textColor="@color/space_gray"
-                    android:textSize="@dimen/font_app_name"
+                    android:textSize="0sp"
                     android:text=""/>
 
             </LinearLayout>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
 
-               android:layout_margin="2dp"
+               <!--android:layout_margin="3dp"-->
 
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                card_view:cardPreventCornerOverlap="false"
-                card_view:cardElevation="@dimen/slice_align"
-                card_view:cardBackgroundColor="@android:color/transparent">
+                <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+                <!--card_view:cardPreventCornerOverlap="false"-->
+                <!--card_view:cardElevation="@dimen/slice_align"-->
+                <!--card_view:cardBackgroundColor="@android:color/transparent">-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -88,39 +86,57 @@
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/dialog_button_fixed_height"
+                        android:layout_height="wrap_content"
 
                         android:gravity="start|center_vertical"
                         android:paddingStart="@dimen/double_round"
 
                         android:text="สแกนใบสั่งสินค้าเพิ่มเติม"
                         android:textSize="@dimen/font_text_view"
-                        android:textColor="@color/angel_white"
+                        android:textColor="@color/stone_gray"
 
                         android:id="@+id/btn_more_scan"
 
-                        android:background="@color/lemon_light_fortune"
+                        android:layout_marginTop="3dp"
+                        android:layout_marginBottom="3dp"
+
+                        android:background="@color/angel_white"
 
                         android:paddingEnd="@dimen/round_padding"
-                        android:drawableEnd="@drawable/ic_chevron_24" />
+                        android:drawablePadding="@dimen/double_round"
+                        android:drawableStart="@drawable/ic_add_24"
+                        android:drawableEnd="@drawable/ic_chevron_24_black_fixed" />
+
+                    <View android:layout_width="match_parent"
+                          android:layout_height="1dp"
+                          android:background="@color/little_light_gray"/>
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/dialog_button_fixed_height"
+                        android:layout_height="wrap_content"
 
                         android:gravity="start|center_vertical"
                         android:paddingStart="@dimen/double_round"
 
-                        android:text="แสดงรายการใบสั่งสินค้าที่สแกนมาแล้ว"
+                        android:text="แสดงรายการที่สแกนแล้ว"
                         android:textSize="@dimen/font_text_view"
-                        android:textColor="@color/angel_white"
+                        android:textColor="@color/stone_gray"
 
                         android:id="@+id/btn_more_info"
 
-                        android:background="@color/lemon_wingless"
+                        android:layout_marginTop="3dp"
+                        android:layout_marginBottom="3dp"
+
+                        android:background="@color/angel_white"
 
                         android:paddingEnd="@dimen/round_padding"
-                        android:drawableEnd="@drawable/ic_chevron_24" />
+                        android:drawablePadding="@dimen/double_round"
+                        android:drawableStart="@drawable/ic_list_24"
+                        android:drawableEnd="@drawable/ic_chevron_24_black_fixed" />
+
+                   <View android:layout_width="match_parent"
+                         android:layout_height="1dp"
+                         android:background="@color/little_light_gray"/>
 
                     <Button
                         android:layout_width="match_parent"
@@ -131,19 +147,21 @@
 
                         android:text="บันทึกรายการ"
                         android:textSize="@dimen/font_text_view"
-                        android:textColor="@color/angel_white"
+                        android:textColor="@color/stone_gray"
 
                         android:id="@+id/btn_next"
 
-                        android:background="@color/lemon_resonance_structure"
+                        android:layout_marginTop="3dp"
+                        android:layout_marginBottom="3dp"
+
+                        android:background="@color/angel_white"
 
                         android:paddingEnd="@dimen/round_padding"
-                        android:drawableEnd="@drawable/ic_chevron_24" />
-
+                        android:drawablePadding="@dimen/double_round"
+                        android:drawableStart="@drawable/ic_done_24"
+                        android:drawableEnd="@drawable/ic_chevron_24_black_fixed" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
-
+            <!--</android.support.v7.widget.CardView>-->
         </LinearLayout>
-
     </LinearLayout>
 </RelativeLayout>
