--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,14 +11,9 @@
     </style>
 
     <style name="AppTheme.NoActionBar"/>
-        <!--<item name="windowActionBar">false</item>-->
-        <!--<item name="windowNoTitle">true</item>-->
-    <!--</style>-->
 
-    <!--<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
-
-    <!--<style name="MyButton" parent="Theme.AppCompat.Light">-->
-        <!--<item name="colorControlHighlight">@color/colorAccentTemp</item>-->
-    <!--</style>-->
+   <style name="MyEditTextTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorControlNormal">@color/angel_white</item>
+    </style>
 
 </resources>
